crates/franken-engine/tests/snapshots/react_compilation_golden__component_with_props_classic.snap
---
source: tests/react_compilation_golden.rs
expression: actual_json
---
{
  "config": {
    "automatic_import_source": null,
    "build_mode": "production",
    "classic_fragment_pragma": null,
    "classic_pragma": null,
    "emit_self": true,
    "emit_source": true,
    "max_depth": 100,
    "runtime_mode": "classic",
    "source_file": null
  },
  "input_jsx": {
    "attributes": [
      {
        "name": "type",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        },
        "type": "named",
        "value": {
          "type": "string_literal",
          "value": "submit"
        }
      },
      {
        "name": "disabled",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        },
        "type": "named",
        "value": {
          "type": "string_literal",
          "value": "true"
        }
      }
    ],
    "children": [],
    "name": {
      "name": "button",
      "span": {
        "end_column": "[END_COLUMN]",
        "end_line": "[END_LINE]",
        "end_offset": "[END_OFFSET]",
        "start_column": "[START_COLUMN]",
        "start_line": "[START_LINE]",
        "start_offset": "[START_OFFSET]"
      },
      "type": "identifier"
    },
    "self_closing": true,
    "span": {
      "end_column": "[END_COLUMN]",
      "end_line": "[END_LINE]",
      "end_offset": "[END_OFFSET]",
      "start_column": "[START_COLUMN]",
      "start_line": "[START_LINE]",
      "start_offset": "[START_OFFSET]"
    },
    "type": "element"
  },
  "result": {
    "diagnostics": [],
    "element": {
      "call_convention": {
        "method": "createElement",
        "object": "React",
        "type": "classic"
      },
      "children": [],
      "depth": 0,
      "element_type": {
        "tag": "button",
        "type": "intrinsic"
      },
      "is_static_children": false,
      "props": {
        "entries": [
          {
            "name": "type",
            "span": {
              "end_column": "[END_COLUMN]",
              "end_line": "[END_LINE]",
              "end_offset": "[END_OFFSET]",
              "start_column": "[START_COLUMN]",
              "start_line": "[START_LINE]",
              "start_offset": "[START_OFFSET]"
            },
            "type": "named",
            "value": {
              "type": "string_literal",
              "value": "submit"
            }
          },
          {
            "name": "disabled",
            "span": {
              "end_column": "[END_COLUMN]",
              "end_line": "[END_LINE]",
              "end_offset": "[END_OFFSET]",
              "start_column": "[START_COLUMN]",
              "start_line": "[START_LINE]",
              "start_offset": "[START_OFFSET]"
            },
            "type": "named",
            "value": {
              "type": "string_literal",
              "value": "true"
            }
          }
        ],
        "extracted_key": null,
        "extracted_ref": null,
        "has_spreads": false
      },
      "source_location": null,
      "span": {
        "end_column": "[END_COLUMN]",
        "end_line": "[END_LINE]",
        "end_offset": "[END_OFFSET]",
        "start_column": "[START_COLUMN]",
        "start_line": "[START_LINE]",
        "start_offset": "[START_OFFSET]"
      }
    },
    "feature_families_used": [
      "self_closing",
      "string_attribute"
    ],
    "required_imports": [],
    "stats": {
      "elements_lowered": 1,
      "expression_children": 0,
      "fragments_lowered": 0,
      "keys_extracted": 0,
      "max_depth_reached": 0,
      "refs_extracted": 0,
      "spread_attributes": 0,
      "text_children": 0,
      "total_props": 2
    }
  },
  "schema_version": "franken-engine.react-compilation-golden.v1",
  "test_name": "component_with_props_classic"
}
