crates/franken-engine/tests/snapshots/react_compilation_golden__falsy_children_automatic.snap
---
source: tests/react_compilation_golden.rs
expression: actual_json
---
{
  "config": {
    "automatic_import_source": null,
    "build_mode": "production",
    "classic_fragment_pragma": null,
    "classic_pragma": null,
    "emit_self": true,
    "emit_source": true,
    "max_depth": 100,
    "runtime_mode": "automatic",
    "source_file": null
  },
  "input_jsx": {
    "attributes": [],
    "children": [
      {
        "expression": "true",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        },
        "type": "expression_container"
      },
      {
        "expression": "false",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        },
        "type": "expression_container"
      },
      {
        "expression": "null",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        },
        "type": "expression_container"
      },
      {
        "expression": "undefined",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        },
        "type": "expression_container"
      }
    ],
    "name": {
      "name": "div",
      "span": {
        "end_column": "[END_COLUMN]",
        "end_line": "[END_LINE]",
        "end_offset": "[END_OFFSET]",
        "start_column": "[START_COLUMN]",
        "start_line": "[START_LINE]",
        "start_offset": "[START_OFFSET]"
      },
      "type": "identifier"
    },
    "self_closing": false,
    "span": {
      "end_column": "[END_COLUMN]",
      "end_line": "[END_LINE]",
      "end_offset": "[END_OFFSET]",
      "start_column": "[START_COLUMN]",
      "start_line": "[START_LINE]",
      "start_offset": "[START_OFFSET]"
    },
    "type": "element"
  },
  "result": {
    "diagnostics": [
      {
        "code": "CHILDREN_IN_PROPS",
        "message": "Children (4 total) folded into props for automatic runtime",
        "severity": "info",
        "span": {
          "end_column": "[END_COLUMN]",
          "end_line": "[END_LINE]",
          "end_offset": "[END_OFFSET]",
          "start_column": "[START_COLUMN]",
          "start_line": "[START_LINE]",
          "start_offset": "[START_OFFSET]"
        }
      }
    ],
    "element": {
      "call_convention": {
        "factory": "jsxs",
        "import_source": "react/jsx-runtime",
        "type": "automatic"
      },
      "children": [],
      "depth": 0,
      "element_type": {
        "tag": "div",
        "type": "intrinsic"
      },
      "is_static_children": false,
      "props": {
        "entries": [
          {
            "name": "children",
            "span": null,
            "type": "named",
            "value": {
              "children": [
                {
                  "expression": "true",
                  "span": {
                    "end_column": "[END_COLUMN]",
                    "end_line": "[END_LINE]",
                    "end_offset": "[END_OFFSET]",
                    "start_column": "[START_COLUMN]",
                    "start_line": "[START_LINE]",
                    "start_offset": "[START_OFFSET]"
                  },
                  "type": "expression"
                },
                {
                  "expression": "false",
                  "span": {
                    "end_column": "[END_COLUMN]",
                    "end_line": "[END_LINE]",
                    "end_offset": "[END_OFFSET]",
                    "start_column": "[START_COLUMN]",
                    "start_line": "[START_LINE]",
                    "start_offset": "[START_OFFSET]"
                  },
                  "type": "expression"
                },
                {
                  "expression": "null",
                  "span": {
                    "end_column": "[END_COLUMN]",
                    "end_line": "[END_LINE]",
                    "end_offset": "[END_OFFSET]",
                    "start_column": "[START_COLUMN]",
                    "start_line": "[START_LINE]",
                    "start_offset": "[START_OFFSET]"
                  },
                  "type": "expression"
                },
                {
                  "expression": "undefined",
                  "span": {
                    "end_column": "[END_COLUMN]",
                    "end_line": "[END_LINE]",
                    "end_offset": "[END_OFFSET]",
                    "start_column": "[START_COLUMN]",
                    "start_line": "[START_LINE]",
                    "start_offset": "[START_OFFSET]"
                  },
                  "type": "expression"
                }
              ],
              "type": "children_array"
            }
          }
        ],
        "extracted_key": null,
        "extracted_ref": null,
        "has_spreads": false
      },
      "source_location": null,
      "span": {
        "end_column": "[END_COLUMN]",
        "end_line": "[END_LINE]",
        "end_offset": "[END_OFFSET]",
        "start_column": "[START_COLUMN]",
        "start_line": "[START_LINE]",
        "start_offset": "[START_OFFSET]"
      }
    },
    "feature_families_used": [
      "element",
      "expression_child"
    ],
    "required_imports": [
      {
        "is_default": false,
        "name": "jsxs",
        "source": "react/jsx-runtime"
      }
    ],
    "stats": {
      "elements_lowered": 1,
      "expression_children": 4,
      "fragments_lowered": 0,
      "keys_extracted": 0,
      "max_depth_reached": 0,
      "refs_extracted": 0,
      "spread_attributes": 0,
      "text_children": 0,
      "total_props": 0
    }
  },
  "schema_version": "franken-engine.react-compilation-golden.v1",
  "test_name": "falsy_children_automatic"
}
